styles/App.css
.App {
  background: -webkit-linear-gradient(left, #60c657 30%, #35aee2 60%);
  text-align: center;
  overflow: hidden;
  min-height: 100%;
}

.container {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 0 30px 0 30px;
  color: white;
  position: relative;
}

.authed-container {
  height: 100%;
  display: flex;
  flex-direction: column;
  padding: 30px;
}

.header {
  margin: 0;
  font-size: 50px;
  font-weight: bold;
  background-color: rgba(0, 0, 0, 0.19);
}

.sub-text {
  font-size: 25px;
}

.gradient-text {
  background: -webkit-linear-gradient(left, #eaff01 50%, #64e872 60%);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.button-container{
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 20px;
  
}

.banner-container{
  display:flex;
  width: 100vw;
}

.cta-button {
  height: 45px;
  border: 0;
  width: auto;
  padding-left: 40px;
  padding-right: 40px;
  border-radius: 10px;
  cursor: pointer;
  font-size: 16px;
  font-weight: bold;
}

.connect-wallet-button {
  color: white;
  background: -webkit-linear-gradient(left, #ff8867, #ff52ff);
  background-size: 200% 200%;
  animation: gradient-animation 4s ease infinite;
  max-width: 300px;
}

.mint-button {
  background: -webkit-linear-gradient(left, #4e44ce, #35aee2);
  background-size: 200% 200%;
  animation: gradient-animation 4s ease infinite;
  margin-left: 10px;
}

button:disabled {
  cursor: not-allowed;
  background: #ccc;
  color: #333;
}

.item-image{
  height: 100px;
}

.footer-container {
  display: flex;
  justify-content: center;
  align-items: center;
  position: absolute;
  bottom: 0 px;
  width: 100%;
  bottom: 0;
  left: 0;
  padding-bottom: 20px;
}

.twitter-logo {
  width: 35px;
  height: 35px;
}

.footer-text {
  font-size: 16px;
  font-weight: bold;
  color: black;
}

.connected-container input[type='text'] {
  display: inline-block;
  padding: 10px;
  width: 50%;
  height: 60px;
  font-size: 16px;
  box-sizing: border-box;
  background-color: rgba(0, 0, 0, 0.25);
  border: none;
  border-radius: 10px;
  margin: 50px auto;
}

.connected-container button {
  height: 50px;
}

.buy-button {
  border: none;
  background-color: #4664ff;
  color: #fff;
  font-size: 16px;
  border-radius: 3px;
  padding: 8px 16px;
  cursor: pointer;
}

.download-button {
  border: none;
  background-color: #4664ff;
  color: #fff;
  font-size: 16px;
  border-radius: 3px;
  padding: 8px 16px;
  cursor: pointer;
}

.create-product-button{
  margin: 10px;
  border: 0;
  font-size: 20px;
  font-weight: bold;
  position: fixed;
  top: 20px;
  right: 20px;
  cursor: pointer;
  color:white;
  background-color: transparent;
  transition: all 0.3s ease;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  z-index: 1;
}

.products-container{
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  margin-top: 20px;
}
/* KeyFrames */
@-webkit-keyframes gradient-animation {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}
@-moz-keyframes gradient-animation {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}
@keyframes gradient-animation {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

